# scenor

./: .docker-ignore  .dockerignore  .gitignore  .instructions  BRANCH_COMPARISON_REPORT.md  CONTEXT.md  MICROSERVICES_ARCHITECTURE.md  README.md  docker-compose.yml  index.html  kilo.json  main.py  package-lock.json  package.json  prisma.config.ts  pyproject.toml  tsconfig.json
backend/: .env  .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  prisma.config.ts  pyproject.toml  schema.sql  tsconfig.json
backend/app/: alembic.ini  main.py
backend/app/alembic/: env.py
backend/app/core/: config.py  deps.py  jwt.py  security.py
backend/app/database/: engine.py  models.py  schemas.py
backend/app/repositories/: __init__.py  scenario_service.py  user_service.py
backend/app/schemas/: __init__.py  auth.py  base.py  scenario.py  user.py
backend/app/tests/: conftest.py  test_auth_api.py  test_jwt.py  test_scenarios_api.py  test_security.py  test_users_api.py
backend/prisma/: admin.prisma  project.prisma  schema.prisma  user.prisma  workflow.prisma
backend/scripts/: bootstrap.sh  test-workflow.mjs  wait-for-db.sh  ws_test.py
backend/src/: app.module.ts  main.ts
backend/src/admin/: admin.module.ts
backend/src/auth/: README-TESTS.md  auth-token.service.spec.ts  auth-token.service.ts  auth.guard.spec.ts  auth.guard.ts  auth.module.ts  roles.guard.spec.ts  roles.guard.ts
backend/src/config/: env.config.ts
backend/src/credentials/: credentials.controller.ts  credentials.module.ts  credentials.service.spec.ts  credentials.service.ts
(+454 files in other folders)
